5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4172/executions/1646_2449.log
== TEST (2019-04-15 12:14:44) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x>0 and y>0:
	mensagem=(x)
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-15 12:14:58) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x>0 and y>0:
	mensagem=(x)
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- EXECUTION TIME:
0.146152
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1646/2449/main.py", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:32:18) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if  :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
File "XXXX", line 11
    if  :
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:32:36) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x,y==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
File "XXXX", line 11
    if x,y==0 :
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:32:43) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x and y==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
File "XXXX", line 14
    if :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:32:48) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x or y==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
File "XXXX", line 14
    if :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:32:56) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if  x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
File "XXXX", line 14
    if :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-17 12:32:57) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if  x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- EXECUTION TIME:
0.224636
-- ERROR:
  File "/home/codebench/codes/1646/2449/main.py", line 14
    if :
       ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:32:58) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if  x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
if :
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
-- ERROR:
File "XXXX", line 14
    if :
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:33:20) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem1=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:33:59) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x,y==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem1=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
print(mensagem1)
-- ERROR:
File "XXXX", line 11
    if x,y==0 :
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:34:04) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if xy==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem1=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:34:20) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	mensagem1=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
print(mensagem1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:34:39) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	me1=(y)
else:
	mensagem="Nao tem solucao"

print(mensagem)
print(me1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 8, in <module>
    x=((c*e)-(b*f))/((a*e)-(b*d))
ZeroDivisionError: float division by zero
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:35:09) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	me1=(y)
else:
	mensagem="Nao tem solucao"
   me1="Nao tem solucao"
print(mensagem)
print(me1)
-- ERROR:
File "XXXX", line 18
    me1="Nao tem solucao"
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:35:21) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	me1=(y)
else:
	mensagem="Nao tem solucao"
   me1="Nao tem solucao"

print(mensagem)
print(me1)
-- ERROR:
File "XXXX", line 18
    me1="Nao tem solucao"
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-17 12:35:22) 
-- CODE:
a=float(input("conjunto: "))
b=float(input("conjunto: "))
c=float(input("conjunto: "))
d=float(input("conjunto: "))
e=float(input("conjunto: "))
f=float(input("conjunto: "))

x=((c*e)-(b*f))/((a*e)-(b*d))
y=((a*f)-(c*d))/((a*e)-(b*d))

if x==0 :
	x=((c*e)-(b*f))/((a*e)-(b*d))
	mensagem=(x)
	y=((a*f)-(c*d))/((a*e)-(b*d))
	me1=(y)
else:
	mensagem="Nao tem solucao"
   me1="Nao tem solucao"

print(mensagem)
print(me1)
-- ERROR:
File "XXXX", line 18
    me1="Nao tem solucao"
                        ^
IndentationError: unindent does not match any outer indentation level
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
